# kiwi_hw_control

./: .gitignore  CONTRIBUTING.md  README.md  The corrected command should be  deploy.sh
.github/workflows/: build_gc.yml
check_qber/check_qber/: Cargo.toml  config.json
check_qber/check_qber/src/: lib.rs
comm/: Cargo.toml
comm/src/: lib.rs
config/: config_hw_sim_alice_local.json  config_hw_sim_bob_local.json  local_sim_gc_alice.json  local_sim_gc_bob.json  local_sim_qber_bob.json  network.json  qber_net_alice.json  readme.md
config/gen_config/: Cargo.toml  README.md  meta_config_for_real.json  meta_config_for_sim.json
config/gen_config/src/: config.rs  lib.rs  main.rs  sim.rs
config/gen_config/upstream_check/: Cargo.toml  README.md
config/qline1/: meta_config.json  network.json  ports_for_localhost.json
config/qline2/: deploy.sh  network.json  network_default.json  network_ecoc.json  ports_for_localhost.json
config/sim/: alice_hw_params.txt  config_hw_sim_alice_local.json  local_sim_gc_bob.json  local_sim_qber_alice.json  meta_config.json  network.json  qber_fifo_alice.json  qber_fifo_bob.json  qber_net_bob.json  sim_config.json
configs/: gc_alice_local.json  gc_bob_local.json  qber_fifo_alice_local.json  qber_fifo_bob_local.json  qber_network_alice_local.json
deployment/: CLAUDE.md  Makefile  OS_setup.md  build.sh  check_systemd.sh  deploy.sh  rsctl.sh
deployment/systemd/: decoy_rng.service  gc.service  hw.service  hws.service  kms.service  logd.service  mon.service  node.service  restartd.service  rng.service  wait-for-boot-node.sh  webinterface.service
gc/: .gitignore  Cargo.toml  README.md  config.json  config_alice.json  config_bob.json  deploy.sh
gc/doc/: makefile  scheme.tex
gc/gc_conf_alice/: gc.json  hw_params.txt  hw_sim.json  qber.json
gc/gc_conf_bob/: gc.json  hw_sim.json  qber.json
gc/src/: comm.rs  config.rs  hw.rs  hw_backup.rs  lib.rs
gc/src/test_data/: tmp.txt
local/: find_shift_pm.py  get_counts.py  histogram.py  histogram_dp.txt  histogram_gate_apd.txt  histogram_sp.txt  hw_alice.py  hw_bob.py  hws.py  logs.py  mon.py  mon_bob.py  mon_readonly_probe.py  nhws.py  plot_keyrate.py  port_forwarding.sh  readme_port_forwarding.txt  restart.py  run_qkd.sh  shutdown.py  wake.sh
local/click_data_set/: click_data_1.txt
local/etsi14/: config.sh  get_key_alice.sh  get_key_bob.sh  get_status_alice.sh  get_status_bob.sh
local/georg/: plot_alphas.py  plot_alphas.sh  plot_fd.py  plot_fd.sh  plot_fd_long.py  plot_fz.py  plot_gcr.py  plot_shift.py  plot_sp.py  plot_sp.sh  plot_time.py  qber.py
local/gui/: README.md  backend.py  qline_gui.py
local/pm_shift_data/: pm_b_shift_1.txt
local/webserver/: app.py
local/webserver/templates/: index.html
monitoring/: client.py  server.py  showlogs.py
old/local/: find_best_gc_comp.py  find_shift_pm.py  find_shift_pm_new.py  find_shift_pm_new2.py  histogram.py  wakeall.sh
old/local/georg/: plot_alphas.sh  plot_fc.py  plot_fd.py  plot_fd.sh  plot_fd_long.py  plot_fz.py  plot_gc_vs_angle.py  (+4 more)
old/remote/: client_ctl.py  cp2remote.sh  ddr_loop_test.py  main_Bob.py  test_board.py
qber/: Cargo.toml  README.md  config_alice.json  config_bob.json  deploy.sh
qber/config/: alice.json  alice_sim.json  alice_simplified.json  bob.json  bob_simplified.json  fifos.json  fifos_alice.json  fifos_bob.json  network_alice.json  sim_fifos_alice.json
qber/src/: comm.rs  config.rs  lib.rs  sockets.rs
qline_clean/: deploy.sh  notes.txt
qline_clean/config/: network.json  ports_for_localhost.json
qline_clean/local/: hw_alice.py  hw_bob.py  hws.py
qline_clean/remote/: ctl_alice.py  ctl_bob.py  hw_alice.py  hw_bob.py  hws_alice.py  hws_bob.py
remote/: autotune.py  cal_lib.py  client_ctl.py  client_ddr.py  client_gc.py  client_ra.py  client_sync.py  config_lib.py  control_servers.sh  counts_logger.py  cp2remote.sh  ctl_alice.py  ctl_bob.py  gclient_ctl.py  gen_seq.py  get_status_and_loss.py  gserver_ctl.py  hw_alice.py  hw_bob.py  hwi_alice.py  hwi_bob.py  hws_alice.py  hws_bob.py  logd.py  main.py  main_Alice.py  main_Bob.py  mon_alice.py  mon_bob.py  nhws_alice.py  nhws_bob.py  notes.txt  restartd.py  server_ctl.py  server_ddr.py  server_gc.py  server_ra.py  server_sync.py  show_hw_settings.sh  wrs_logger.py
remote/alice_server/: hw.py  hws.py  mon.py
remote/bob_server/: hw.py  hws.py  mon.py
remote/data/: var.txt
remote/lib/: Aurea.py  SPD_OEM.py  cal.py  cal_lib.py  communication.py  config_lib.py  fpga.py  gen_seq.py  print_ddr_status.py  statusfiles.py  test_find_peak.py  test_seq.py  visuals.py
remote/rng_fpga/: Makefile  decoy_rng.conf  file2fpga.py  rng.conf  rng2file  rng2file.c  rng2fpga  rng2fpga.c
remote/test_ddr/: ddr_bin2txt
remote/test_tdc/: dma_loop.c
(+70 files in other folders)
