[package]
name = "gc"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.132"
serde = { version = "1.0.213", features = ["derive"] }
clap = { version = "4.5.32", features = ["derive"] }
memmap = "0.7.0"
nix = {version = "0.29.0", features= ["fs"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2.3"
uuid = { version = "1.10.0", features = ["v4"] }

comm = { path = "../comm" }
